# gpt-do

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: release.yml
do/: cli.py
do/doers/: doer.py  gpt3_doer.py  pywright_doer.py
gpt_do/: cli.py  common.py  getch.py
gpt_do/cli/: __init__.py  common.py  derr.py  do.py  wtf.py
gpt_do/doers/: chatgpt_doer.py  doer.py  gpt3_doer.py  pywright_doer.py  rev_chatgpt_doer.py
gpt_do/wtfers/: sql_wtfer.py  wtfer.py
