[tool.poetry]
name = "gpt-do"
version = "0.1.2"
description = "GPT-powered bash commands."
authors = ["Yasyf Mohamedali <yasyfm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yasyf/gpt-do"

[tool.poetry.dependencies]
python = "==3.*,>=3.9.0"
click = "^8.1.3"
retry = "^0.9.2"
openai = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "==22.*,>=22.12.0"

[tool.poetry.scripts]
do = 'gpt_do.cli:do'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
