[tool.poetry]
name = "gpt-do"
version = "0.1.16"
description = "GPT-powered bash commands."
authors = ["Yasyf Mohamedali <yasyfm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yasyf/gpt-do"

[tool.poetry.dependencies]
python = "==3.*,>=3.9.0"
click = "^8.1.3"
retry = "^0.9.2"
openai = "^0.25.0"
playwright = "^1.29.0"
rich = "^12.6.0"
dirtyjson = "^1.0.8"
py-getch = "^1.0.1"
tabulate = "^0.9.0"
sqlparse = "^0.4.3"

[tool.poetry.dev-dependencies]
black = "==22.*,>=22.12.0"

[tool.poetry.scripts]
wtf = 'gpt_do.cli.wtf:wtf'
do = 'gpt_do.cli:do'
ddo = 'gpt_do.cli:do'
gpt-do = 'gpt_do.cli:do'
derr = 'gpt_do.cli:derr'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
